[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/InitialScene.gd" type="Script" id=1]
[ext_resource path="res://Fonts/PixelMiners-KKal.otf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 8
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[node name="InitialScene" type="Node2D"]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
margin_top = -0.463303
margin_right = 240.0
margin_bottom = 319.537
theme = SubResource( 2 )

[node name="Panel" type="Panel" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -94.0
margin_top = -115.0
margin_right = 94.0
margin_bottom = 140.0
theme = SubResource( 2 )

[node name="Start" type="Button" parent="Control/Panel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -87.0
margin_top = -20.0
margin_right = 87.0
margin_bottom = -6.0
text = "Start"

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -88.0
margin_top = -122.5
margin_right = 88.0
margin_bottom = 108.5

[node name="RichTextLabel2" type="RichTextLabel" parent="Control/Panel/VBoxContainer"]
margin_right = 176.0
margin_bottom = 15.0
rect_min_size = Vector2( 0, 15 )
size_flags_horizontal = 3
bbcode_enabled = true
bbcode_text = "[center]Selection Algorithm"
text = "Selection Algorithm"

[node name="Selection" type="OptionButton" parent="Control/Panel/VBoxContainer"]
margin_top = 19.0
margin_right = 176.0
margin_bottom = 35.0
rect_min_size = Vector2( 0, 16 )
size_flags_vertical = 0
text = "Selection"
align = 1

[node name="RichTextLabel3" type="RichTextLabel" parent="Control/Panel/VBoxContainer"]
margin_top = 39.0
margin_right = 176.0
margin_bottom = 54.0
rect_min_size = Vector2( 0, 15 )
size_flags_horizontal = 3
bbcode_enabled = true
bbcode_text = "[center]AI Controller"
text = "AI Controller"

[node name="AI" type="OptionButton" parent="Control/Panel/VBoxContainer"]
margin_top = 58.0
margin_right = 176.0
margin_bottom = 74.0
rect_min_size = Vector2( 0, 16 )
size_flags_vertical = 0
text = "AI type"
align = 1

[node name="RichTextLabel" type="RichTextLabel" parent="Control/Panel/VBoxContainer"]
margin_top = 78.0
margin_right = 176.0
margin_bottom = 93.0
rect_min_size = Vector2( 0, 15 )
size_flags_horizontal = 3
bbcode_enabled = true
bbcode_text = "[center]Mutation  Rate"
text = "Mutation  Rate"

[node name="MutationRate" type="HSlider" parent="Control/Panel/VBoxContainer"]
margin_top = 97.0
margin_right = 176.0
margin_bottom = 113.0
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 1.0
step = 0.01
value = 0.02
ticks_on_borders = true

[node name="MutationRateValue" type="RichTextLabel" parent="Control/Panel/VBoxContainer"]
margin_top = 117.0
margin_right = 176.0
margin_bottom = 132.0
rect_min_size = Vector2( 0, 15 )
size_flags_horizontal = 3
bbcode_enabled = true
bbcode_text = "[center]Value"
text = "Value"

[node name="RichTextLabel4" type="RichTextLabel" parent="Control/Panel/VBoxContainer"]
margin_top = 136.0
margin_right = 176.0
margin_bottom = 151.0
rect_min_size = Vector2( 0, 15 )
size_flags_horizontal = 3
bbcode_enabled = true
bbcode_text = "[center]Population Size"
text = "Population Size"

[node name="PopulationSize" type="LineEdit" parent="Control/Panel/VBoxContainer"]
margin_top = 155.0
margin_right = 176.0
margin_bottom = 175.0
rect_min_size = Vector2( 0, 20 )
text = "10"
align = 1

[node name="RichTextLabel5" type="RichTextLabel" parent="Control/Panel/VBoxContainer"]
margin_top = 179.0
margin_right = 176.0
margin_bottom = 194.0
rect_min_size = Vector2( 0, 15 )
size_flags_horizontal = 3
bbcode_enabled = true
bbcode_text = "[center]Generation count"
text = "Generation count"

[node name="GenerationCount" type="LineEdit" parent="Control/Panel/VBoxContainer"]
margin_top = 198.0
margin_right = 176.0
margin_bottom = 218.0
rect_min_size = Vector2( 0, 20 )
text = "-1"
align = 1

[node name="RichTextLabel" type="RichTextLabel" parent="Control"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -106.0
margin_top = 14.05
margin_right = 107.0
margin_bottom = 36.05
bbcode_enabled = true
bbcode_text = "[center]Evolutionary Enemies 
Simulator"
text = "Evolutionary Enemies 
Simulator"
[connection signal="pressed" from="Control/Panel/Start" to="." method="_on_Start_pressed"]
[connection signal="value_changed" from="Control/Panel/VBoxContainer/MutationRate" to="." method="_on_MutationRate_value_changed"]
